# ANPR

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md
notebooks/: 00_project_setup_and_paths.ipynb  01_dataset_recreation_and_cleaning.ipynb  02_detection_training_stages.ipynb  03_bootstrap_autolabel_and_audit.ipynb  04_ocr_dataset_creation.ipynb  05_ocr_training_and_benchmarks.ipynb  06_end_to_end_anpr_inference.ipynb  07_error_analysis_and_hard_example_mining.ipynb  README.md
scripts/: check_env.py  evaluate_predictions.py  run_inference.py  validate_dataset_structure.py
src/anpr_junigadi/: __init__.py  cli.py  config.py  pipeline.py
src/anpr_junigadi/data/: __init__.py  plate_utils.py
src/anpr_junigadi/detection/: __init__.py  yolo_detector.py
src/anpr_junigadi/evaluation/: __init__.py  metrics.py
src/anpr_junigadi/ocr/: __init__.py  parseq_reader.py  postprocess.py  trocr_reader.py
src/anpr_junigadi/utils/: __init__.py  files.py  image.py
